# morpheus-code-generator

./: Cargo.toml  Dockerfile.template  README.md  build.rs  flake.nix  test.yml
c/zephyr/: zephyr.h
integration_tests/: Cargo.toml  build.rs  test.yml
integration_tests/c/zephyr/: zephyr.h
integration_tests/src/: main.rs  test_c.rs  test_rust.rs
src/: cpp_template.rs  lib.rs  main.rs  rust_template.rs  yaml_parser.rs
src/file_generator/: cpp_header.rs  cpp_source.rs  cpp_template.rs  mod.rs  rust_template.rs
src/file_generator/language_models/: cpp.rs  mod.rs  rust.rs
src/file_generator/templates/: c_header.h  c_template.c  rust_template.rs  rust_template_test.rs
src/yaml_parser/: mod.rs  test.rs  types.rs
tests/: test_c.rs  test_rust.rs
