[package]
name = "codes-parser"
version = "0.1.0"
edition = "2024"
authors = ["Aurelien VALADE <wolvi-lataniere>"]

[target.aarch64-apple-darwin]
profiler=true

[dev-dependencies]
cc="1.2.32"
target-triple = "0.1.4"
bindgen = "0.71.0"

[build-dependencies]
bindgen = "0.72.0"
cc="1.2.32"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
getopts = "0.2"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
getopts = "0.2"
