[package]
name = "codes-parser"
version = "1.0.0"
edition = "2024"
authors = ["Aurelien VALADE <wolvi-lataniere>"]

[target.aarch64-apple-darwin]
profiler=true

[workspace]
resolver = "3"
members = ["integration_tests"]

[dev-dependencies]
cc="1.2.32"
target-triple = "0.1.4"
bindgen = "0.71.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
getopts = "0.2"

